fix: remove redundant linkDiv call and adjust z-index

--- a/src/index.less
+++ b/src/index.less
@@ -222,12 +222,12 @@
     left: 0;
     width: max-content; // let words expand the div and keep max length at the same time
     max-width: 35em;
-    z-index: 11;
     direction: ltr;
     user-select: auto;
     pointer-events: auto;
     color: var(--color);
     background-color: var(--bgcolor);
+    z-index: 100;
   }
 
   me-tpc {
